UserInteractions Corregido. Cambios en .env.example y start_server.sh
